# libmeow

./: .gitignore  CMakeLists.txt  Makefile
example/: CMakeLists.txt  stdout_meow.cpp
inc/: meow.h
src/: meow.c
